--- a/portfolio.html
+++ b/portfolio.html
@@ -3,10 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/variables.css">
     <title>Portfolio</title>
     
 </head>
 <body>
-    
+    <header class="header">
+        <a href="file:///D:/HTML/GitHub/goit-markup-hw-01/index.html">WebStudio</a>
+        <nav>
+            <a href="file:///D:/HTML/GitHub/goit-markup-hw-02/index.html">Студия</a>
+            <a href="file:///D:/HTML/GitHub/goit-markup-hw-02/portfolio.html">Портфолио</a>
+            <a href="">Контакты</a>
+        </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </header>
+    <main>
+        <section class="sec">
+            <h2 hidden>Наши инструменты</h2>
+            <ul>
+                <li><button class="btn">Все</button></li>
+                <li><button class="btn">Веб-сайты</button></li>
+                <li><button class="btn">Дизайн</button></li>
+                <li><button class="btn">Маркетинг</button></li>
+                <li><button class="btn">Приложения</button></li>
+            </ul>
+        </section>
+        <section class="sec-view">
+            <ul>
+                <li>
+                    <img src="./images/note.jpg" alt="">
+                    <h3>Технокряк</h3>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/basket.jpg" alt="">
+                    <h3>Постер New Orlean vs Golden Star</h3>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/fish.jpg" alt="">
+                    <h3>Ресторан Seafood</h3>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/hphones.jpg" alt="">
+                    <h3>Проект Prime</h3>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/boxes.jpg" alt="">
+                    <h3>Проект Boxes</h3>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/screen.jpg" alt="">
+                    <h3>Inspiration has no Borders</h3>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/book.jpg" alt="">
+                    <h3>Издание Limited Edition</h3>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/label.jpg" alt="">
+                    <h3>Проект LAB</h3>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/note-hands.jpg" alt="">
+                    <h3>Growing Business</h3>
+                    <p>Приложение</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer class="footer">
+        <p><a href="file:///D:/HTML/GitHub/goit-markup-hw-01/index.html">WebStudio</a></p> 
+        <ul>
+            <li>г. Киев, пр-т Леси Украинки, 26</li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </footer> 
 </body>
 </html>
