--- a/portfolio.html
+++ b/portfolio.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <header class="header">
-        <a href="file:///D:/HTML/GitHub/goit-markup-hw-01/index.html">WebStudio</a>
+        <a href="index.html">WebStudio</a>
         <nav>
-            <a href="file:///D:/HTML/GitHub/goit-markup-hw-02/index.html">Студия</a>
-            <a href="file:///D:/HTML/GitHub/goit-markup-hw-02/portfolio.html">Портфолио</a>
+            <a href="index.html">Студия</a>
+            <a href="portfolio.html">Портфолио</a>
             <a href="">Контакты</a>
         </nav>
         <ul>
