--- a/index.html
+++ b/index.html
@@ -5,33 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/variables.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Studio</title>
 </head>
 <body>
     <header class="header">
-        <a href="index.html">WebStudio</a>
-        <nav>
-            <a href="index.html">Студия</a>
-            <a href="portfolio.html">Портфолио</a>
-            <a href="">Контакты</a>
+        <nav class="header-nav">
+            <a href="index.html"><span style="color:rgba(33, 150, 243, 1)">Web</span><span style="color:rgba(0, 0, 0, 1)">Studio</span></a>
+            <ul class="header-nav-list">
+                <li><a href="index.html">Студия</a></li>
+                <li><a href="portfolio.html">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+            <ul class="header-nav-contacts">
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
     </header>
     <main>
-        <section>
+        <section class="ef-solutions">
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button class="btn">Заказать услугу</button>
         </section>
         <section>
             <h2 hidden>Наши преимущества</h2>
-            <ul>
+            <ul class="our-edges">
                 <li>
                     <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -50,32 +53,32 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="we-doing">
             <h2>Чем мы занимаемся</h2>
-            <img src="images/wawd_one.png" alt="">
-            <img src="images/wawd_two.png" alt="">
-            <img src="images/wawd_three.png" alt="">
+            <img class="img" src="images/wawd_one.png" alt="ввод информации">
+            <img class="img" src="images/wawd_two.png" alt="сопоставление данных">
+            <img class="img" src="images/wawd_three.png" alt="анализ баз данных">
         </section>
         <section class="sec-team">
             <h2>Наша команда</h2>
-            <ul>
+            <ul class="our-team">
                 <li>
-                    <img src="./images/dem_igor.jpg" alt="">
+                    <img class="our-member" src="./images/dem_igor.jpg" alt="Игорь Демьяненко">
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/rep_olga.jpg" alt="">
+                    <img class="our-member" src="./images/rep_olga.jpg" alt="Ольга Репина">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/tar_nik.jpg" alt="">
+                    <img class="our-member" src="./images/tar_nik.jpg" alt="Николай Тарасов">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/erm_mich.jpg" alt="">
+                    <img class="our-member" src="./images/erm_mich.jpg" alt="Михаил Ермаков">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
@@ -83,9 +86,9 @@
         </section>
     </main> 
     <footer class="footer">
-        <p><a href="file:///D:/HTML/GitHub/goit-markup-hw-01/index.html">WebStudio</a></p> 
+        <a href="index.html"><span style="color:rgba(33, 150, 243, 1)">Web</span><span style="color: rgba(255, 255, 255, 1)">Studio</span></a>
         <ul>
-            <li>г. Киев, пр-т Леси Украинки, 26</li>
+            <li class="footer-ad">г. Киев, пр-т Леси Украинки, 26</li>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
