--- a/portfolio.html
+++ b/portfolio.html
@@ -3,82 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/variables.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Portfolio</title>
-    
 </head>
 <body>
     <header class="header">
-        <a href="index.html">WebStudio</a>
-        <nav>
-            <a href="index.html">Студия</a>
-            <a href="portfolio.html">Портфолио</a>
-            <a href="">Контакты</a>
+        <nav class="header-nav">
+            <a href="index.html"><span style="color:rgba(33, 150, 243, 1)">Web</span><span style="color:rgba(0, 0, 0, 1)">Studio</span></a>
+            <ul class="header-nav-list">
+                <li><a href="index.html">Студия</a></li>
+                <li><a href="portfolio.html">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+            <ul class="header-nav-contacts">
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
     </header>
     <main>
         <section class="sec">
-            <h2 hidden>Наши инструменты</h2>
+            <h1 hidden>Наши инструменты</h1>
             <ul>
-                <li><button class="btn">Все</button></li>
-                <li><button class="btn">Веб-сайты</button></li>
-                <li><button class="btn">Дизайн</button></li>
-                <li><button class="btn">Маркетинг</button></li>
-                <li><button class="btn">Приложения</button></li>
+                <li><button class="btns">Все</button></li>
+                <li><button class="btns">Веб-сайты</button></li>
+                <li><button class="btns">Дизайн</button></li>
+                <li><button class="btns">Маркетинг</button></li>
+                <li><button class="btns">Приложения</button></li>
             </ul>
         </section>
         <section class="sec-view">
-            <ul>
+            <h1 hidden>Наши работы</h1>
+            <ul class="view">
                 <li>
-                    <img src="./images/note.jpg" alt="">
+                    <img class="img" src="./images/note.jpg" alt="Технокряк">
                     <h3>Технокряк</h3>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/basket.jpg" alt="">
+                    <img class="img" src="./images/basket.jpg" alt="Постер New Orlean vs Golden Star">
                     <h3>Постер New Orlean vs Golden Star</h3>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/fish.jpg" alt="">
+                    <img class="img" src="./images/fish.jpg" alt="Ресторан Seafood">
                     <h3>Ресторан Seafood</h3>
                     <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/hphones.jpg" alt="">
+                    <img class="img" src="./images/hphones.jpg" alt="Проект Prime">
                     <h3>Проект Prime</h3>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/boxes.jpg" alt="">
+                    <img class="img" src="./images/boxes.jpg" alt="Проект Boxes">
                     <h3>Проект Boxes</h3>
                     <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/screen.jpg" alt="">
+                    <img class="img" src="./images/screen.jpg" alt="Inspiration has no Borders">
                     <h3>Inspiration has no Borders</h3>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/book.jpg" alt="">
+                    <img class="img" src="./images/book.jpg" alt="Издание Limited Edition">
                     <h3>Издание Limited Edition</h3>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/label.jpg" alt="">
+                    <img class="img" src="./images/label.jpg" alt="Проект LAB">
                     <h3>Проект LAB</h3>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/note-hands.jpg" alt="">
+                    <img class="img" src="./images/note-hands.jpg" alt="Growing Business">
                     <h3>Growing Business</h3>
                     <p>Приложение</p>
                 </li>
@@ -86,9 +90,9 @@
         </section>
     </main>
     <footer class="footer">
-        <p><a href="file:///D:/HTML/GitHub/goit-markup-hw-01/index.html">WebStudio</a></p> 
+        <a href="index.html"><span style="color:rgba(33, 150, 243, 1)">Web</span><span style="color: rgba(255, 255, 255, 1)">Studio</span></a>
         <ul>
-            <li>г. Киев, пр-т Леси Украинки, 26</li>
+            <li class="footer-ad">г. Киев, пр-т Леси Украинки, 26</li>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
