--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/variables.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Studio</title>
@@ -15,21 +14,21 @@
 <body>
     <header class="header">
         <nav class="header-nav">
-            <a href="index.html"><span style="color:rgba(33, 150, 243, 1)">Web</span><span style="color:rgba(0, 0, 0, 1)">Studio</span></a>
+            <a href="index.html"><span class="emblem">Web</span><span class="emblem-nav">Studio</span></a>
             <ul class="header-nav-list">
-                <li><a href="index.html">Студия</a></li>
-                <li><a href="portfolio.html">Портфолио</a></li>
+                <li><a class="header-a-portfolio" href="index.html">Студия</a></li>
+                <li ><a  href="portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
-            <ul class="header-nav-contacts">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
         </nav>
+        <ul class="header-nav-contacts">
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </header>
     <main>
         <section class="ef-solutions">
-            <h1>Эффективные решения для вашего бизнеса</h1>
+            <h1>Эффективные решения<br>для вашего бизнеса</h1>
             <button class="btn">Заказать услугу</button>
         </section>
         <section>
@@ -55,9 +54,11 @@
         </section>
         <section class="we-doing">
             <h2>Чем мы занимаемся</h2>
-            <img class="img" src="images/wawd_one.png" alt="ввод информации">
-            <img class="img" src="images/wawd_two.png" alt="сопоставление данных">
-            <img class="img" src="images/wawd_three.png" alt="анализ баз данных">
+            <ul>
+                <li><img class="img" src="images/wawd_one.png" alt="ввод информации"></li>
+                <li><img class="img" src="images/wawd_two.png" alt="сопоставление данных"></li>
+                <li><img class="img" src="images/wawd_three.png" alt="анализ баз данных"></li>
+            </ul>
         </section>
         <section class="sec-team">
             <h2>Наша команда</h2>
@@ -86,9 +87,9 @@
         </section>
     </main> 
     <footer class="footer">
-        <a href="index.html"><span style="color:rgba(33, 150, 243, 1)">Web</span><span style="color: rgba(255, 255, 255, 1)">Studio</span></a>
+        <a href="index.html"><span class="emblem">Web</span><span class="emblem-footer">Studio</span></a>
+        <address class="footer-ad">г. Киев, пр-т Леси Украинки, 26</address>
         <ul>
-            <li class="footer-ad">г. Киев, пр-т Леси Украинки, 26</li>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
